--- a/band/template.html
+++ b/band/template.html
@@ -43,14 +43,14 @@
                 </p>
             </section>
             <section class="section2">
-                <h2 id="backgorund">Pre-computing life</h2>
+                <header><h2 id="backgorund">Pre-computing life</h2></header>
                 <p>During my GCSEs and A-levels, I was never sure about what I wanted to do after school.
                     Going to University and getting student finance didn’t make sense to me when there was no overall goal to aim for.
                     After my levels A-Ievels I did a year motor vehicle before getting a job in manufacturing engineering for almost 10 years.
                 </p>
             </section>
             <section class="section1">
-                <h2>My introduction to computing</h2>
+                <header><h2>My introduction to computing</h2></header>
                 <p>My first experience with computing languages was when I saw my yahoo account came with Geocities (Wow that’s a blast from the past, right), 
                     which allowed you to create your own webpage for no cost, so I thought I’d give it a go. 
                     I started by using the website builder, but had to use the help feature to find out a few things including how to edit the hex color of an item in the html tab. 
@@ -60,7 +60,7 @@
                     </p>
             </section>
             <section class="section2">
-                <h2>Turning computing into a career</h2>
+                <header><h2>Turning computing into a career</h2></header>
                 <p>Deciding to leave my job to pursue a career in computing with only a basic understanding of html as a background of the field was quite a daunting choice. 
                     However, an Associates Degree included a vast range of modules from Maths and English to Business and Accounting which meant should the subject major not be suitable, 
                     it allows a much easier switch to another major. 
@@ -69,7 +69,7 @@
                     </p>
             </section>
             <section class="section1">
-                <h2>Showcase</h2>
+                <header><h2>Showcase</h2></header>
                 <p>To see some samples of my work, go to the <a href="showcase.html">showcase page</a>.</p>
             </section>
         </main>
