--- a/band/template.html
+++ b/band/template.html
@@ -92,6 +92,55 @@
                 <a href="https://www.linkedin.com/in/chris-wilton" class="linkedIn">
                     <i class="fab fa-linkedin"></i>
                 </a>
+
+		   div class="row footer">
+		<!-- facebook link -->
+		<div class="fb">
+			<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
+				<img src="FB-logo.png" class="socialMedia" alt="Facebook" /> 
+			</a>
+		</div>
+		
+		<!-- twitter link -->
+		<div class="twitter">
+			<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
+			<img src="twitter-logo.png" class="socialMedia" alt="twitter" /> </a>
+		</div>
+		
+		<!-- website details -->
+		<div class="ownership">
+			<h5>
+				<span class="siteDetails">
+					<a href="index.html" class="menu">www.batalabangor.com</a>
+				</span>
+		<!--	<br />		-->
+				<span class="siteDetails">								<!-- opens mail client -->
+					<a href="mailto:bookings@batalabangor.com" class="menu">bookings@batalabangor.com</a>
+				</span>
+				
+				<br />
+				<span class="siteDetails">
+					&copy; Chris Wilton 11-3-2016						<!-- "&copy;" inerts a copyright sign -->
+				</span>
+		<!--	<br />		-->
+				<span class="siteDetails">
+<!--					<script type="text/javascript">
+						var date = new Date(document.lastModified);
+						document.write("Last modified by: Chris Wilton " + date.getDate() + "-" + 
+							(date.getMonth()+1) + "-" + date.getFullYear() );
+					</script>
+-->
+<span id="modifiedDate"></span>					
+				</span>
+				
+				<br />
+				<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+					<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" /></a>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+					<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!" /></a> 	
+			</h5>
+		</div>			
+	</div>
             </p>
         </footer>
     </div>
